tdf#95954: Reasonable background for roadmap widget

also move setting control font/text style to ApplySettings func

Reviewed-on: https://gerrit.libreoffice.org/25054
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 433cb02f88c75428fe5a34ca090fd43ae1cc855d)

Change-Id: Iec71ebb42424e0d29fb5c5e155773b61bfcf2313